# tissue-deformation-simulator-vedo

./: .gitignore  .pre-commit-config.yaml  README.md  activate_pyvenv.sh  pyproject.toml
blender_scripts/: save_collection_poses_to_yaml.py  toggle_visibility.py
src/deformation_lib/: surface.py  utils.py
src/deformation_lib/deformation_fields/: RBF.py
src/deformation_lib/scripts/: rbf_example.py  rbf_on_collected_data.py  tissue_deformation.py  vedo_example.py
src/deformation_lib/scripts/deformation_fields/: RBF.py  simple_affine_transformation.py
src/deformation_lib/scripts/tracking_demo/: live_tracking_demo.py  plot_tracked_positions.py  vedo_deformation_gui.py  vedo_point_visualization.py
src/deformation_lib/scripts/tracking_demo/draft/: ar_with_pyrender.py  simple_affine_transformation.py  vedo_animation.py  vedo_grid_warping.py  vedo_point_visualization.py
src/deformation_lib/scripts/vedo_simple/: vedo_simple_example.py
src/deformation_lib/visualization/: Plotter_3D.py  matplotlib_visualization.py  vedo_visualization.py
