[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deformation_lib"]

[project]
name = "deformation_lib"
version = "0.0.0"
description = "Deformation library package"
readme = "README.md"
keywords = ["Soft tissue deformation"]
authors = [
    { name = "Juan Antonio Barragan", email = "jbarrag3@jh.edu" }
]
maintainers = [
    { name = "Juan Antonio Barragan", email = "jbarrag3@jh.edu" }
]
dependencies = [
    "vedo>=2025.5.4"
]

